--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
         <div class="screen">SCREEN</div>
         <div class="lower">
             <div class="numbers">
-                <div class="7-row">
+                <div class="seven-row">
                     <button id="9">9</button>
                     <button id="8">8</button>
                     <button id="7">7</button>
                 </div>
-                <div class="4-row">
+                <div class="four-row">
                     <button id="6">6</button>
                     <button id="5">5</button>
                     <button id="4">4</button>
                 </div>
-                <div class="1-row">
+                <div class="one-row">
                     <button id="3">3</button>
                     <button id="2">2</button>
                     <button id="1">1</button>
                 </div>
                 <div class="c-row">
-                    <button id="0">0</button>
                     <button id="cancel">C</button>
+                    <button id="0">0</button>
                     <button id="equal">=</button>
                 </div>
 
