created branch calc-array, to try and use an array to display numbers on the screen from user input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="calc">
-        <div class="screen">SCREEN</div>
+        <div class="screen"></div>
         <div class="lower">
             <div class="numbers">
                 <div class="seven-row">
