--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="c-row">
                     <button id="cancel">C</button>
-                    <button id="0">0</button>
+                    <button id="zero">0</button>
                     <button id="equal">=</button>
                 </div>
 
