finished style. Fixed bug where 0 wouldn't work due to ID can't start with a number. Added a class on the button element called zero and used that for CSS properties.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="c-row">
                     <button id="cancel">C</button>
-                    <button id="zero">0</button>
+                    <button id="0" class="zero">0</button>
                     <button id="equal">=</button>
                 </div>
 
